@@ -1,1 +1,2 @@
 Catalyst-Plugin-Sitemap*
+.build
