@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Yanick Champoux
 copyright_year   = 2010
 
-version = 0.0.1
+version = 1.0.0
 
 [ModuleBuild]
 
